TimeFormatter is refactored, time units and their values in seconds are stored in two separate arrays